KUBER-35/kubernetes-administration/24.3-kuber-3.3/config/network-policy/allow-back-to-cache.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-back-to-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cache
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: back
  policyTypes:
  - Ingress
