KUBER-35/kubernetes-administration/24.3-kuber-3.3/config/network-policy/allow-front-to-back.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-to-back
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: back
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front
  policyTypes:
  - Ingress
