KUBER-35/kubernetes-administration/24.3-kuber-3.3/config/network-policy/deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-deny-all
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
